feat: Enhance Notification and Push Services
- Added methods for managing notifications in NotificationService:
  - getUnreadCount: Count unread notifications for a user.
  - markAllAsRead: Mark all notifications as read for a user.
  - deleteAllNotifications: Delete all notifications for a user.
  - broadcastNotificationAsync: Asynchronously send broadcast notifications.
  - saveSubscription: Save Web Push subscription for a user.

- Introduced PushService for handling Web Push notifications:
  - sendPush: Synchronously send a push notification.
  - sendPushAsync: Asynchronously send a push notification.
  - sendPushBatch: Send a batch of push notifications.
  - retryFailedDeliveries: Retry sending failed push notifications.
  - cleanupInvalidSubscriptions: Remove invalid push subscriptions.
  - getDeliveryStats: Retrieve delivery statistics for push notifications.

- Implemented Event creation and update logic in EventServiceImpl with validation checks.
- Optimized visibility checks in PostServiceImpl to reduce N+1 query issues.
- Updated application properties for improved performance and monitoring.